--- a/eso-project.bib
+++ b/eso-project.bib
@@ -272,14 +272,7 @@
 @misc{fowler_products_not_projects,
   title={Microservices},
   author={Fowler, Martin},
-  note = {\url{http://martinfowler.com/articles/microservices.html\#ProductsNotProjects}}
-}
-
-@misc{fowler_ci_2006,
-  title={Continuous Integration},
-  author={Fowler, Martin},
-  year={2006},
-  note={\url{http://martinfowler.com/articles/continuousIntegration.html}}
+  note = {\url{http://martinfowler.com/articles/microservices.html/#ProductsNotProjects}}
 }
 
 @book{Fowler1999,
@@ -321,7 +314,7 @@
 }
 
 @article{10.1109/IISWC.2005.1526008,
-	author = {null Zhongbo Cao and null Wei Huang and J.M. Chang},
+	author = {Zhongbo Cao and Wei Huang and J.M. Chang},
 	title = {A study of Java virtual machine scalability issues on SMP systems},
 	journal ={2013 IEEE International Symposium on Workload Characterization (IISWC)},
 	volume = {0},
@@ -338,12 +331,6 @@
   title = {Developer Productivity Report 2012; Java Tools, Tech, Devs and Data},
   author = {ZeroTurnaround},
   note = {\url{http://zeroturnaround.com/rebellabs/developer-productivity-report-2012-java-tools-tech-devs-and-data/4/}}
-}
-
-@misc{ci_fowler,
-  title = {Continuous Integration},
-  author = {Fowler, Martin},
-  note = {\url{http://martinfowler.com/articles/continuousIntegration.html\#PracticesOfContinuousIntegration}}
 }
 
 @misc{scm_ranking,
@@ -413,4 +400,16 @@
   title = {Pair Programming},
   note = {\url{http://www.extremeprogramming.org/rules/pair.html}}
 }
+
+@misc{xp,
+  title = {Extreme Programming},
+  note = {\url{http://www.extremeprogramming.org/}}
+}
+
+@misc{fowler_continuous_integration,
+  author={Fowler},
+  title={Continuous Integration}, 
+  note={\url{http://martinfowler.com/articles/continuousIntegration.html/#PracticesOfContinuousIntegration}}
+}
+
 
