--- a/eso-project.tex
+++ b/eso-project.tex
@@ -52,7 +52,7 @@ Engenharia de Software, SWEBOK, Scrum
 
 Desta forma, no que concerne à área de atuação da MotorBRAS, a redução no controle de emissões de gás carbônico apresenta-se, mais do que nunca, como um diferencial competitivo atraente. Países mais desenvolvidos estão prontos e dispostos a investir em tecnologias para redução do consumo de CO2, de forma que o risco no investimento em tecnologias ambientais apresenta-se como baixo, uma vez que a demanda por novas tecnologias neste campo é cada vez mais atrativa. As empresas que forem pioneiras no investimento de tecnologias ambientais que influenciem a vida das pessoas terão uma ótima vantagem competitiva. 
 
-Este projeto visa agregar valor à intenção da MoToRBRAS de entrar no mercado de carros elétricos como serviço até 2020. A proposta é a de agregar tecnologia ao produto, de forma a cativar o consumidor em relação ao serviço e, assim, mitigar o impacto do Homem no meio ambiente. Consequências diretas são a geração de uma imagem positiva no mercado, bem como a conquista de uma posição de vanguarda e liderança. 
+Este projeto visa agregar valor à intenção da MotorBRAS de entrar no mercado de carros elétricos como serviço até 2020. A proposta é a de agregar tecnologia ao produto, de forma a cativar o consumidor em relação ao serviço e, assim, mitigar o impacto do Homem no meio ambiente. Consequências diretas são a geração de uma imagem positiva no mercado, bem como a conquista de uma posição de vanguarda e liderança. 
 
 Países desenvolvidos são favoráveis à ideia de aluguel de carros elétricos em suas grandes cidades, como forma de locomoção barata e rápida das pessoas para seu local de trabalho. Carros elétricos, sendo pequenos e de baixo consumo, são altamente atrativos como um meio-termo entre os carros particulares e o transporte público. 
 
@@ -69,7 +69,7 @@ De acordo com o projeto previsto pelo grupo, as seguintes características serã
 
 \item Integração com redes sociais: para que seja possível ao indivíduo ter acesso a sua agenda, contatos, calendários e preferências musicais instantaneamente; 
 
-\item Customizações físicas internas: preferências como temperatura do carro (ajuste do ar condicionado) e posição do banco serão carregadas de um servidor central e aplicadas diretamente ao veículo quando da identificação do indivíduo; da mesma forma, alterações no veículo são salvas no servidor central como preferências do indivíduo, para posterior aplicação numa nova viagem;
+\item Customizações físicas internas: preferências como temperatura do carro (ajuste do ar condicionado) e posição do banco serão carregadas de um servidor central e aplicadas diretamente ao veículo quando da identificação do indivíduo; da mesma forma, alterações no veículo são salvas no servidor central como preferências do indivíduo, para posterior aplicação numa nova viagem.
 
 \end{itemize}
 
@@ -89,7 +89,7 @@ Além dos sistemas internos ao veículo, são necessários softwares externos pa
 
 \item Sistema para aluguel de veículos pelos cliente: componente importante da infraestrutura de prestação do serviço, este software permitirá que os motoristas interessados efetuem agendamento e posterior pagamento pelo serviço de aluguel de veículo através da Internet;
 
-\item Sistema para gestão da frota de veículos: o processo de gestão da frota de veículos requer um software de apoio. Atividades de manutenção, abastecimento, disponibilização e recepção de veículos nos pátios, entre outras, serão suportadas por esse software. Este software representará o elo entre o processo de aluguel de veículos e as atividades administrativas e operacionais ligadas à gestão da frota.
+\item Sistema para gestão da frota de veículos: o processo de gestão da frota de veículos requer um software de apoio. Atividades de manutenção, abastecimento, disponibilização e recepção de veículos nos pátios, entre outras, serão suportadas por esse software. Este software representará o elo entre o processo de aluguel de veículos e as atividades administrativas e operacionais ligadas à gestão da frota;
 
 \item Servidor de armazenamento de perfis: software executado em um servidor centralizado que armazenará as preferências de cada usuário, bem como efetuará, de forma segura, a ponte entre o veículo e os dados disponíveis nas redes sociais do motorista.
 
@@ -99,7 +99,7 @@ Algumas características do produto e do contexto de negócios influenciarão a 
 
 \begin{itemize}
 
-\item Alto nível de inovação do produto: não existem serviços similares no mercado brasileiro. Estamos tomando como base a experiência de serviços semelhantes em outros países (EUA e Europa \cite{car2go_locations}, mas, devido a fatores culturais, existe a possibilidade da experiência não se repetir com sucesso em nosso mercado. Tal situação possivelmente levará a uma proposta de adaptação pelo departamento de marketing, o que, por sua vez, exigirá a capacidade de absorção de novos requisitos por parte da TI, durante o projeto. Dessa forma, optamos pela adoção de métodos ágeis, que são mais adequados a esse tipo de necessidade oriunda da mudança dinâmica de requisitos \cite{cao_ramesh_2008}.
+\item Alto nível de inovação do produto: não existem serviços similares no mercado brasileiro. Estamos tomando como base a experiência de serviços semelhantes em outros países (EUA e Europa \cite{car2go_locations}), mas, devido a fatores culturais, existe a possibilidade da experiência não se repetir com sucesso em nosso mercado. Tal situação possivelmente levará a uma proposta de adaptação pelo departamento de marketing, o que, por sua vez, exigirá a capacidade de absorção de novos requisitos por parte da TI, durante o projeto. Dessa forma, optamos pela adoção de métodos ágeis, que são mais adequados a esse tipo de necessidade oriunda da mudança dinâmica de requisitos \cite{cao_ramesh_2008}.
 
 \item Heterogeneidade dos softwares a serem desenvolvidos: diferentes tipos de software serão desenvolvidos -- desde sistemas desktop administrativos, passando por softwares para servidores e chegando a software embarcado para execução dentro do veículo. Esse contexto torna interessante a ideia da criação de pequenas equipes (ou times), especializadas no domínio específico da aplicação que estão desenvolvendo, dedicadas à atuação apenas no software que atende suas respectivas especialidades e iteragindo frequetemente entre si \cite{backmann_nord_ozkaya_2012}.
 
@@ -115,22 +115,22 @@ Os requisitos de produto serão expressos por meio de uma especificação compos
 
 Um engenheiro de software com perfil mais técnico também precisará ser envolvido no entendimento dos requisitos juntamente com o analista de requisitos, pois a visão técnica que considera os requisitos não-funcionais deve ser analisada ao mesmo tempo em que os requisitos surgem. Considerar aspectos não-funcionais apenas em nível de design tem historicamente causado problemas, e no nível de implementação os problemas podem ser ainda piores \cite{agile_requirements_definition}.
 
-O tester também deve estar no levantamento de requisitos, para prover uma visão mais funcional que permita que a definição da especificação seja definida de uma forma funcional e testável, sugerindo alternativas que possam ser mais práticas para realizar, levantando exemplos e contexto para cada história, e garantindo a verificabilidade dos requisitos \cite{} \cite{society_software_2004}. % pg 2-1
+O tester também deve estar no levantamento de requisitos, para prover uma visão mais funcional que permita que a definição da especificação seja definida de uma forma funcional e testável, sugerindo alternativas que possam ser mais práticas para realizar, levantando exemplos e contexto para cada história, e garantindo a verificabilidade dos requisitos \cite{society_software_2004}. % pg 2-1
 
 Os analistas de requisitos precisarão ter livre acesso aos stakeholders (pessoal de marketing e parte jurídica, que atuam como reguladores), que vão fornecer e auxiliar na validação dos requisitos. Esse acesso deverá ser feito através de entrevistas, onde podem-se fazer uso de diagramas de domínio pela técnica de DDD \cite{evans_domain-driven_2004} (mais do que o rigor do UML) como formas de obter clareza nos detalhes das histórias. Os modelos conceituais estão a cargo dos entrevistadores, e não definem característica formal. Apenas é esperado, alinhado com o método ágil, que sejam definidos cenários para cada história \cite{washington2003using}, de forma a guiar o time durante a construção e permitir geração de validação automatizada dos requisitos \cite{melnik_multiple_2007}.
 
-Considerando a característica dinâmica da equipe de marketing, assume-se que os requisitos são voláteis; a abordagem para mudanças é a de tentar incorporar o máximo possível se a história permanecer a mesma, mas caso trate-se de outra história, incorporar apenas na próxima iteração, como forma de reduzir os impactos de tais mudanças sobre os prazos e custos do projeto \cite{zowghi2002study}.
+Considerando-se a característica dinâmica da equipe de marketing, assume-se que os requisitos são voláteis; a abordagem para mudanças é a de tentar incorporar o máximo possível se a história permanecer a mesma, mas caso trate-se de outra história, incorporar apenas na próxima iteração, como forma de reduzir os impactos de tais mudanças sobre os prazos e custos do projeto \cite{zowghi2002study}.
 
 Uma arquitetura será definida com base no entendimento das primeiras histórias da especificação (e com base em conhecimento da visão geral do projeto e características de infra-estrutura da empresa), e evoluída durante todo o projeto \cite{cohn_agile_2009}, apoiando-se em técnicas como refatoração e automatização de testes de regressão, de forma a ir melhorando o design do código sendo criado e garantindo que o mesmo seja capaz de ser evoluído com mais facilidade em cada nova modificação \cite{arora_chauhan_2014}.
 
-Os requisitos serão validados através de testes de aceitação, de duas formas: manual (na reunião de review da iteração definida pelo Scrum \cite{scrum_development_process}, quando os stakeholders comparam as histórias combinadas em relação ao funcionamento do sistema), e automatizada: a técnicas de BDD \cite{chelimsky2010rspec} será utiilzada, para que cenário de cada história seja vinculado a métodos de teste durante a construção, de forma que cada execução da suite de testes gere um relatório que define se as histórias estão funcionando de acordo com o esperado.
+Os requisitos serão validados através de testes de aceitação, de duas formas: manual (na reunião de review da iteração definida pelo Scrum \cite{scrum_development_process}, quando os stakeholders comparam as histórias combinadas em relação ao funcionamento do sistema), e automatizada: a técnica de BDD \cite{chelimsky2010rspec} será utilizada, para que cada cenário de cada história seja vinculado a métodos de teste durante a construção, de forma que cada execução da suite de testes gere um relatório que define se as histórias estão funcionando de acordo com o esperado.
 
 \subsection{Design}
 
 No início do projeto (antes da primeira iteração), considerando a visão geral e o entendimento dos requisitos de maior prioridade, o design de software arquitetural (top-level) \cite{society_software_2004} será definido por um % pg 3-1 
-engenheiro de software com perfil sênior em desenvolvimento. Após isto, a cada iteração, o trabalho de design detalhado será incorporado no trabalho dos desenvolvedores da equipe, de forma que o design não será mais dissociado da construção, e sim será parte desta (seguindo o conceito de "design evolucionário", que se faz viável pelas práticas de teste e integração contínua reforçadas pelos métodos ágeis) \cite{fowler_planned_evolutionary_design}. O engenheiro sênior em desenvolvimento pode definir design arquitetural para futuras iterações, dependendo da necessidade, e trabalhar juntamente com o time na definição do design detalhado, durante a iteração. O design arquitetural deverá ser documentado em alto nível, e para a característica da MotorBRAS (vários times trabalhando em subsistemas diferentes - distribuídos e não-distribuídos - que definem um sistema como um todo) serão considerados aspectos tais como estilo arquitetural sendo utilizado, forma de tratamento de eventos, forma de lidar com concorrência, distribuição de componentes, persistência de dados \cite{society_software_2004}.
+engenheiro de software com perfil sênior em desenvolvimento. Após isto, a cada iteração, o trabalho de design detalhado será incorporado no trabalho dos desenvolvedores da equipe, de forma que o design não será mais dissociado da construção, e sim será parte desta (seguindo o conceito de "design evolucionário", que se faz viável pelas práticas de teste e integração contínua reforçadas pelos métodos ágeis \cite{fowler_planned_evolutionary_design}). O engenheiro sênior em desenvolvimento pode definir design arquitetural para futuras iterações, dependendo da necessidade, e trabalhar juntamente com o time na definição do design detalhado, durante a iteração. O design arquitetural deverá ser documentado em alto nível, e para a característica da MotorBRAS (vários times trabalhando em subsistemas diferentes - distribuídos e não-distribuídos - que definem um sistema como um todo) serão considerados aspectos tais como estilo arquitetural sendo utilizado, forma de tratamento de eventos, forma de lidar com concorrência, distribuição de componentes, persistência de dados \cite{society_software_2004}.
 
-Já a responsabilidade de design detalhado cabe a todos os desenvolvedores do time, e não será exigida documentação formal para tal, pois assume-se o conceito de que o "código-fonte é o design" (ou seja, seguindo a visão de design do XP, o design existe como uma forma diferente, significando a prática de manter o código claro, uso de técnicas de refatoração e integração contínua, conhecimento e aplicação de padrões de projeto, ter um olho em mudanças futuras e saber comunicar o design por meio de conversação \cite{fowler_design_dead}). Contudo, será necessário validar a qualidade deste design, o que será feito através da elaboração de relatório de inspeção de código a cada iteração, que deve considerar as questões do documento de design arquitetural, além de técnicas de design valorizadas no projeto da MotorBRAS (paradigma orientado a objetos), tais como: abstração, acoplamento, coesão, decomposição, modularização, encapsulamento, separação de responsabilidades, design patterns. 
+Já a responsabilidade de design detalhado cabe a todos os desenvolvedores do time, e não será exigida documentação formal para tal, pois assume-se o conceito de que o "código-fonte é o design" (ou seja, seguindo a visão de design do XP \cite{xp}, o design existe como uma forma diferente, significando a prática de manter o código claro, uso de técnicas de refatoração e integração contínua, conhecimento e aplicação de padrões de projeto, ter um olho em mudanças futuras e saber comunicar o design por meio de conversação \cite{fowler_design_dead}). Contudo, será necessário validar a qualidade deste design, o que será feito através da elaboração de relatório de inspeção de código a cada iteração, que deve considerar as questões do documento de design arquitetural, além de técnicas de design valorizadas no projeto da MotorBRAS (paradigma orientado a objetos), tais como: abstração, acoplamento, coesão, decomposição, modularização, encapsulamento, separação de responsabilidades, design patterns. 
 
 O relatório será realizado pelo engenheiro de software da própria equipe que agregar o papel de sênior, e deve ser entregue como um artefato da iteração (relatório de qualidade de design). A responsabilidade pela veracidade do documento é de toda a equipe.
 
@@ -175,7 +175,7 @@ Demais aspectos de testes dentro do projeto da MotorBRAS serão guiados pelo mod
 \label{fig:agile_testing_quadrants}
 \end{figure}
 
-Observa-se que os níveis de teste propostos pelo SWEBOK \cite{society_software_2004} (Testes Unitários, os Testes de Integração e os Testes de Sistema) estão respectivamente relacionados aos Unit Tests, Component Tests e Funcional Tests do diagrama, respectivamente.
+Observa-se que os níveis de teste propostos pelo SWEBOK \cite{society_software_2004} (Testes Unitários, os Testes de Integração e os Testes de Sistema) estão respectivamente relacionados aos Unit Tests, Component Tests e Funcional Tests do diagrama.
 
 Considerando o diagrama acima, espera-se que o tester atue em todos os quadrantes:
 
@@ -199,18 +199,16 @@ A manutenção ocorrerá tanto durante o projeto (por meio de alterações ou co
 
 Durante o projeto, qualquer nova requisição de modificação (evolução ou correção) deve ser definida na especificação, seja alterando ou adicionando novos itens. Tal item precisa ser definido em forma de história e com prioridade, para ingressar numa próxima iteração, seguindo o mesmo fluxo de um novo requisito. Desta forma, incorporando correções no fluxo normal de desenvolvimento (e não após todo o projeto ter terminado), procura-se eliminar o problema onde 80 por cento do esforço de manutenção é gasto em ações não corretivas. Aqui, a manutenção acontece enquanto o projeto ainda existe, e a prioridade fica a cargo dos stakeholders \cite{schwaber_scrum_2013}. 
 
-A evolução do software, portanto, será primeiramente agregada durante o projeto de desenvolvimento, cabendo apenas que haja um gerenciamento dos requisitos em relação à prioridade. Como a equipe é a mesma, não há transição de conhecimento. As manutenções corretivas, adaptativas e perfectivas irão entrar no fluxo normal de desenvolvimento. Já espera-se que a manutenção preventiva seja um trabalho implícito, resultante das práticas de qualidade e métricas nas fases de análise, design e construção. No caso especial da construção, espera-se aplicação de refatoração e code review.
+A evolução do software, portanto, será primeiramente agregada durante o projeto de desenvolvimento, cabendo apenas que haja um gerenciamento dos requisitos em relação à prioridade. Como a equipe é a mesma, não há transição de conhecimento. As manutenções corretivas, adaptativas e perfectivas irão entrar no fluxo normal de desenvolvimento. Espera-se que a manutenção preventiva seja um trabalho implícito, resultante das práticas de qualidade e métricas nas fases de análise, design e construção. No caso especial da construção, espera-se aplicação de refatoração e code review.
 
 A definição de testes de regressão de outras fases também irá ajudar na manutenção, definindo aspectos que não funcionam mais conforme esperado. Os testes de aceitação automatizados com BDD (já citados na seção de Construção deste documento) também garantem a mesma regressão, mas num nível mais alto: garantem que as funcionalidades como um todo continuam válidas. 
 
 Espera-se que toda a qualidade definida até o momento (com testes automatizados, métricas e inspeção de design e análise) permitam que uma análise de impacto gere sempre um baixo custo, e que haja uma alta capacidade de manutenibilidade. Considerando a realidade do projeto da MotorBRAS, que sugere alterações constantes em funcionalidades, esta análise de impacto definindo baixo custo é uma métrica importante.
 
-Após a finalização do projeto, uma equipe menor será designada para mantê-lo, seguindo os mesmos princípios definidos até então, e com boa parte do mesmo pessoal, de forma a facilitar a transmissão de conhecimento. Esta futura equipe, poderá fazer uso dos documentos de especificação e design de arquitetura e das documentações de testes para entender o sistema de um aspecto funcional, e deverá estudar o código para entender um design mais detalhado. O esforço em qualidade é pago aqui, pois o código deve estar escrito de forma que seja fácil de entender e evoluir, de forma que a prática de engenharia reversa deve ser desconsiderada. 
+Após a finalização do projeto, uma equipe menor será designada para mantê-lo, seguindo os mesmos princípios definidos até então, e com boa parte do mesmo pessoal, de forma a facilitar a transmissão de conhecimento e permitir ao time de desenvolvimento assumir total responsabilidade pelo software em produção \cite{fowler_products_not_projects}. Esta futura equipe poderá fazer uso dos documentos de especificação e design de arquitetura e das documentações de testes para entender o sistema de um aspecto funcional, e deverá estudar o código para entender um design mais detalhado. O esforço em qualidade é pago aqui, pois o código deve estar escrito de forma que seja fácil de entender e evoluir, de forma que a prática de engenharia reversa deve ser desconsiderada. 
 
 Revisões e auditorias \cite{society_software_2004} deverão ser conduzidas regularmente ao longo do ciclo de vida do produto (e não somente durante a
 duração do projeto), de forma que desvios possam ser identificados e corrigidos antes que causem maiores danos.
-
-Após o projeto ter sido finalizado, uma equipe será criada para mantê-lo pós-produção. A equipe que dará manutenção após o projeto ter sido finalizado é um time composto de pessoas que desenvolveram o produto, de forma que permite ao time de desenvolvimento assumir total responsabilidade pelo software em produção \cite{fowler_products_not_projects}. 
 
 
 \subsection{Gerenciamento de Configuração}
@@ -236,17 +234,7 @@ Em relação ao código-fonte gerado, a gerência de configuração precisará g
 
 Outra característica que precisa ser considerada é a permissão de acesso. Apenas usuários de um dado projeto podem ter permissão de acesso ao repositório de informações do projeto, a não ser que a gerência diga o contrário. Assim sendo, é preciso haver uma forma automática de conceder acessos, tanto individuais quanto a grupos, de forma que um privilégio individual de um elemento num grupo possa sobrescrever seu privilégio enquanto membro do grupo.
 
-Esta gerência também será responsável pela integração contínua
-\cite{fowler_ci_2006}: deverá prover e manter uma ferramenta de geração de
-builds automatizados, a ser executada diariamente ("integrando" o código,
-agregando a execução de testes unitários e de integração gerados pelos
-programadores ao processo de build, gerando relatórios de métrica de cobertura
-de testes, e notificando todo o time no caso de builds e testes quebrados), bem
-como prover uma opção para geração de releases e deploy automático em servidor
-de testes (base da entrega contínua). Estes relatórios poderão alimentar os
-processos de Gerenciamento da Qualidade \cite{society_software_2004} e, além
-disto, espera-se agilidade na entrega do sistema para validação pelos
-stakeholders. 
+Esta gerência também será responsável pela integração contínua \cite{fowler_continuous_integration}: deverá prover e manter uma ferramenta de geração de builds automatizados, a ser executada diariamente ("integrando" o código, agregando a execução de testes unitários e de integração gerados pelos programadores ao processo de build, gerando relatórios de métrica de cobertura de testes, e notificando todo o time no caso de builds e testes quebrados), bem como prover uma opção para geração de releases e deploy automático em servidor de testes (base da entrega contínua). Estes relatórios poderão alimentar os processos de Gerenciamento da Qualidade \cite{society_software_2004} e, além disto, espera-se agilidade na entrega do sistema para validação pelos stakeholders. 
 
 Portanto, é responsabilidade da gerência de configuração gerar os releases/baselines. As baselines devem ser geradas a cada fim de iteração e os releases devem estar disponíveis para ser gerados sempre que a equipe de construção finalizar uma iteração, de forma que o ciclo de execução de trabalho deve estar alinhado com o desta equipe. Se o código-fonte não estiver conforme o validado pela análise estática de código e de acordo com as métricas de cobertura de testes geradas pela integração contínua, o release não poderá ser entregue. Cabe ao gerente de configuração a responsabilidade de alertar o time, de forma a evitar atrasos num entendimento tardio de que o release não poderá ser entregue por falta de qualidade.
 
@@ -262,7 +250,7 @@ Ainda que seja considerado possível gerenciar software como qualquer outro proc
 \item existe uma rápida taxa de mudança em tecnologias envolvidas. 
 \end{itemize}
 
-Considerando tais especificidades, serão estabelecidas políticas de contratação de pessoal que valorizem profissionais atuantes e experientes em processos iterativos, e com conhecimento prático de tecnologias bem difundidas no mercado. O processo de desenvolvimento Scrum será utilizado por conta de ser um processo iterativo difundido \cite{scrum_development_process}. Em relação à plataforma de desenvolvimento, utilizaremos Java, pois além de ser uma das plataformas mais utilizadas no mundo há quase 20 anos \cite{tiobe_language} (provendo grande quantidade de recursos no mercado, além de bibliotecas, frameworks e documentação), seu escopo cobre tanto softwares Web quanto softwares embarcados (por meio do Android) -- o que está diretamente vinculado à necessidade do projeto de rodar software tanto num servidor central quanto em cada carro, individualmente.
+Considerando tais especificidades, serão estabelecidas políticas de contratação de pessoal que valorizem profissionais atuantes e experientes em processos iterativos, e com conhecimento prático de tecnologias bem difundidas no mercado. O processo de desenvolvimento Scrum será utilizado por conta de ser um processo iterativo difundido \cite{scrum_development_process}. Em relação à plataforma de desenvolvimento, utilizaremos Java, pois além de ser uma das plataformas mais utilizadas no mundo há quase 20 anos \cite{tiobe_language} (provendo grande quantidade de recursos no mercado, além de bibliotecas, frameworks e documentação), seu escopo cobre tanto softwares Web quanto softwares embarcados -- o que está diretamente vinculado à necessidade do projeto de rodar software tanto num servidor central quanto em cada carro, individualmente.
 
 Uma vez que as pessoas certas tenham sido contratadas, deve-se verificar quais outros aspectos, como infraestrutura, suporte e expertise, também sejam  garantidos, de forma a validar a análise de viabilidade do projeto, garantindo, assim, que o projeto possa ser completado com sucesso de forma efetiva em prazo e custo \cite{society_software_2004}. Em relação às definições dos stackholders, durante todo o projeto será assumido que os requisitos e o escopo serão flexíveis, de forma a dar suporte à necessidade de alterações de ideias que o setor de marketing da MotorBRAS geralmente apresenta. Para dar suporte a estas alterações, e considerando que o Scrum será adotado, as mesmas serão realizadas diretamente no Backlog do produto, de forma a serem consideradas em iterações futuras, sem impactar a iteração corrente. \cite{schwaber_scrum_2013}
 
@@ -295,7 +283,7 @@ O relacionamento entre complexidade e probabilidade de sucesso de um projeto, co
 \label{fig:scrum_risk_complexity_graph_02}
 \end{figure}
 
-As figuras anteriores são relativas a experiências de desenvolvimento de software em empresas como Borland, Easel, VMARK e ADM. O risco e a complexidade foram assumidos nos projetos, e projetos de sucesso foram criados. E ainda que processos ágeis ainda sejam vistos com certa ressalva, já foram provados como sendo um conjunto de métodos maduros de desenvolvimento de software. \cite{agile_meth_hype_reality}
+Estes dois gráficos são relativos a experiências de desenvolvimento de software em empresas como Borland, Easel, VMARK e ADM. O risco e a complexidade foram assumidos nos projetos, e projetos de sucesso foram criados. E ainda que processos ágeis ainda sejam vistos com certa ressalva, já foram provados como sendo um conjunto de métodos maduros de desenvolvimento de software. \cite{agile_meth_hype_reality}
 
 Como forma de automação ao processo \cite{society_software_2004}, as práticas de integração contínua e entrega contínua serão adotadas. Para a MotorBRAS, a forma pela qual a qualidade do software será medida será por meio de cobertura de código e análise estática de código. Estas métricas serão coletadas por meio de ferramentas consolidadas de mercado, capazes de gerar relatórios de acompanhamento. Além destas medidas de qualidade, a entrega de incrementos de software para teste pelos stackholders também será feita de forma automatizada, garantindo rapidez e redução de erros no processo.   
 
@@ -320,7 +308,7 @@ O projeto fará uso da linguagem de programação Java, conforme já descrito na
 
 Em relação a testes, a equipe atuará em duas frentes: 
 \begin{itemize}
-\item em testes que validam código: pela aplicação do conceito de integração contínua \cite{ci_fowler}, que realiza a compilação do projeto e então executa testes automatizados a cada dia, notificando o time sobre divergências, assim verificando e validando a qualidade do que está sendo gravado em repositório de código
+\item em testes que validam código: pela aplicação do conceito de integração contínua \cite{fowler_continuous_integration}, que realiza a compilação do projeto e então executa testes automatizados a cada dia, notificando o time sobre divergências, assim verificando e validando a qualidade do que está sendo gravado em repositório de código
 \item em testes funcionais, de caixa preta, que validam o output a partir do input: fazendo uso da ferramenta Selenium, que reproduz o uso automático da aplicação, simulando um usuário real em casos de teste previamente gravados (com base nas especificações). 
 \end{itemize}
 
@@ -349,8 +337,6 @@ O projeto aqui proposto caminha lado-a-lado com a tendência atual de preocupaç
 
 
 \section{Conclusão}
-
-% Este artigo procurou demonstrar como as diferentes disciplinas de engenharia de software expostas no SWEBOK podem ser aplicadas na resolução de um problema hipotético. A forma como as disciplinas do SWEBOK são abordadas tem um enfoque particular em práticas ágeis de desenvolvimento de software, de forma a demonstrar que tais práticas podem aplicadas dentro das orientações propostas pelo SWEBOK.
 
 A Sustentabilidade é um tema que está em voga. A necessidade de se reduzir os
 impactos das atividades humanas sobre o ambiente é praticamente um consenso.
@@ -381,12 +367,7 @@ para manter um automóvel, mas de uma rede complexa de decisões balanceando
 questões como tempo demandado pela viagem, nível de conforto esperado e,
 possivelmente, outros fatores, subjetivos ou não.
 
-O projeto aqui proposto apresenta potencial para influenciar em tais decisões
-de caráter ético, proporcionando uma maneira de se utilizar um automóvel
-consumindo menos espaço e, com isso, contribuindo para a mobilidade de toda a
-cidade. E, também, das decisões de caráter econômico, oferecendo uma nova
-alternativa ao se ponderar os diferentes fatores envolvidos em uma viagem
-através da cidade.
+O projeto aqui proposto apresenta potencial para influenciar em tais decisões de caráter ético, proporcionando uma maneira de tornar atrativo o uso de automóveis elétricos, que são menores e poluem menos, contribuindo assim com o meio-ambiente e com a mobilidade de toda a cidade. E, também, das decisões de caráter econômico, oferecendo uma nova alternativa ao se ponderar os diferentes fatores envolvidos em uma viagem através da cidade.
 
 \bibliographystyle{IEEEtran}
 \bibliography{eso-project}
